# clawbench

./: .gitignore  CLAWBENCH_V0_4_SPEC.md  CONTRIBUTING.md  Dockerfile  Dockerfile.main  LICENSE  PARTNER_TRACE_SPEC.md  README.md  SPACE_README.md  app.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
baselines/: BASELINE_SOURCES.md  basic_usage_query_summary.json  hermes_trace_summary.json
clawbench/: __init__.py  cli.py  client.py  diagnose_cli.py  diagnostic.py  dynamics.py  dynamics_archive.py  dynamics_plots.py  environment.py  factor_analysis.py  harness.py  hub.py  insights.py  judge.py  prediction.py  profile.py  query_catalog.py  queue.py  recommendations.py  releases.py  render.py  schemas.py  scorer.py  services.py  session_labels.py  simulated_user.py  stats.py  submission_models.py  task_factory.py  tasks.py  trajectory.py  upload.py  utilization.py  worker.py
profiles/: example_research_stack.yaml  frontier_gemini_3_pro.yaml  frontier_glm_5_1.yaml  frontier_gpt_5_4.yaml  frontier_kimi_k25.yaml  frontier_minimax_m27.yaml  frontier_opus_4_6.yaml  frontier_qwen_3_6.yaml  local_ollama_gpt_oss.yaml
reports/: 3MODEL_SWEEP_2026-04-11.md  6MODEL_LEADERBOARD_2026-04-12.md  CLAWBENCH_100_TASK_PLAN.md  CLOSED_3MODEL_SWEEP_2026-04-12.md  CONTRIBUTING_TASKS.md  EVAL_REPORT_6MODEL_2026-04-14.md  FRONTIER_7MODEL_BASELINE.md  FULL_BENCHMARK_REPORT.md  PARALLEL_HARNESS_REPORT.md  REAL_BENCHMARK_RESULTS.md  V05_DELIVERY_REPORT.md  open_vs_closed_bakeoff_summary.md
scripts/: _archive_cache.sh  analyze_open_vs_closed.py  audit_per_run.py  audit_runs.py  classify_regimes.py  compute_constraint_index.py  container_sweep_minimal.sh  container_sweep_single.sh  generate_dynamical_report.py  generate_fair_report.py  git_checkpoint.py  ingest_real_run.py  inject_judge_rubrics.py  refactor_verifiers.py  rejudge_all.py  rejudge_gpt54.py  run_open_vs_closed_bakeoff.py  run_posterior_dynamics_pipeline.py  scale_timeouts.py  seed_historical_db.py  snr_weighted_ranking.py  survival_analysis.py  variance_decomp.py
tasks-domain/: MANIFEST.yaml  README.md
tasks-public/: MANIFEST.yaml  README.md
tests/: test_client.py  test_dynamics.py  test_harness.py  (+21 more)
(+244 files in other folders)
